Tue Apr  8 07:05:48 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: We must use div
	  instruction for unsigned division.

	* net/loveruby/cflat/compiler/CodeGenerator.java: We must call
	  cltd before idiv.

	* net/loveruby/cflat/compiler/CodeGenerator.java: define facade
	  methods for Assembler class.

	* net/loveruby/cflat/asm/Assembler.java: remove *q methods such as
	  movq, addq, etc. by utilizing method overloading.

Mon Mar 24 02:47:41 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: defvar -> defvars (again).

Mon Mar 24 02:39:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: top_decls -> top_defs

Sat Mar  1 20:06:33 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: use (new) CastNode
	  constructor directly.

	* net/loveruby/cflat/ast/CastNode.java: new constructor.

Sun Feb 24 23:40:15 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: implement usual
	  arithmetic conversion for BinaryOpNode.

	* net/loveruby/cflat/compiler/TypeChecker.java: implement usual
	  arithmetic conversion for OpAssignNode.

	* net/loveruby/cflat/compiler/TypeChecker.java: implement usual
	  arithmetic conversion for ++, --.

	* net/loveruby/cflat/compiler/TypeChecker.java: new entry point
	  TypeTable#check(AST).

Sun Feb 24 19:58:45 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj (SPACES): "\v" is invalid
	  escape sequence in JavaCC.

Sun Feb 24 15:31:24 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj (INTEGER): 0xUL is invalid.

	* net/loveruby/cflat/parser/Parser.jj (CHARACTER): 'aa' is
	  invalid.

	* net/loveruby/cflat/parser/Parser.jj: refactoring: insert spaces
	  after comma of character class.

Mon Feb 18 06:12:14 2008  Minero Aoki  <aamine@loveruby.net>
